# crash-bucket

./: .gitignore  LICENSE  README.md  deduplicator.py  pyproject.toml
examples/: .gitignore  README.md  main.c
examples/stdin/: README.md  main.c
examples/stdin/output/default/crashes/: README.txt  id:000002,sig:06,src:000002,time:264,execs:1334,op:havoc,rep:4  id:000003,sig:06,src:000002,time:293,execs:1506,op:havoc,rep:4
src/crashbucket/: deduplicator.py
