[project]
name = "crash-dedup"
version = "0.0.1"
authors = [
    {name = "Sean Deaton"}
]
description = "Deduplicates crashing input to programs using LLDB's Python API."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["crash", "deduplication", "fuzzing", "security", "afl", "lldb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Debuggers"
]
dependencies = [
    "pwntools",
    "python-magic",
]

[project.scripts]
crash-dedup = "dedup.deduplicator:main"

[project.urls]
"Homepage" = "https://github.com/WhatTheFuzz/afl-lldb-deduplicator"